# SoAgents

./: .env.example  .env.verify.example  .gitignore  BOOTSTRAP.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PLAN-workspace-agentdir-split.md  PROCESS.md  README.md  eslint.config.js  package-lock.json  package.json  publish_macos.sh  release.sh  soagents.pen  tsconfig.json  vite.config.ts
.baoyu-skills/baoyu-xhs-images/: EXTEND.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
.ship/: session-id.local
scripts/: download_nodejs.sh  post-build-server.sh  verify-providers.ts
specs/: 2026-03-29-soagents-website-design.md  PROJECT_PLAN.md  markdown-editor.md  prd-at-file-ref-and-slash-skills.md  prd-skill-multi-select.md  test_cases_scheduled_tasks_upgrade.md  version.md
specs/guides/: build_and_release_guide.md  design_guide.md  macos_distribution_guide.md
specs/plans/: 2026-03-19-mcp-frontend-alignment.md  2026-03-28-im-phase1.5.md
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  cron_task.rs  heartbeat.rs  lib.rs  local_http.rs  logger.rs  memory_update.rs  process_cmd.rs  proxy.rs  proxy_config.rs  scheduled_task.rs  scheduler.rs  sidecar.rs  sse_proxy.rs  system_binary.rs  tray.rs  updater.rs
src-tauri/src/im/: adapter.rs  buffer.rs  dingtalk.rs  feishu.rs  health.rs  mod.rs  router.rs  telegram.rs  types.rs  util.rs
src-tauri/src/openclaw/: bridge_process.rs  manifest.rs  mod.rs  npm_runner.rs  paths.rs  shim.rs
(+201 files in other folders)
